--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
-        "illuminate/html": "^5.0"
+        "illuminate/html": "^5.0",
+        "barryvdh/laravel-ide-helper": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -37,7 +38,9 @@
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
-            "php artisan optimize"
+            "php artisan clear-compiled",
+            "php artisan optimize",
+            "php artisan ide-helper:generate"
         ],
         "post-root-package-install": [
             "php -r \"copy('.env.example', '.env');\""
