login_and_register_ok

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "bootstrap": "^3.3.6",
+    "gulp": "^3.8.8",
+    "jquery": "^2.2.0"
   },
   "dependencies": {
     "laravel-elixir": "^3.0.0",
