--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "devDependencies": {
     "bootstrap": "^3.3.6",
     "gulp": "^3.8.8",
-    "jquery": "^2.2.0"
+    "jquery": "^2.2.0",
+    "requirejs": "^2.1.22"
   },
   "dependencies": {
     "laravel-elixir": "^3.0.0",
