--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "illuminate/html": "^5.0",
-        "barryvdh/laravel-ide-helper": "2.*"
+        "barryvdh/laravel-ide-helper": "2.*",
+        "qiniu/php-sdk": "^7.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
