--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "gulp": "^3.8.8",
     "jquery": "^2.2.0",
     "requirejs": "^2.1.22",
-    "simditor": "^2.3.6"
+    "simditor": "^2.3.6",
+    "simditor-markdown": "^1.1.2"
   },
   "dependencies": {
     "laravel-elixir": "^3.0.0",
