--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
-        "illuminate/html": "^5.0",
+        "laravel/framework": "5.2.*",
+        "laravelcollective/html": "^5.2",
         "barryvdh/laravel-ide-helper": "2.*",
         "qiniu/php-sdk": "^7.0",
         "league/flysystem-aws-s3-v3": "^1.0",
@@ -17,7 +17,9 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1"
+        "phpspec/phpspec": "~2.1",
+        "symfony/dom-crawler": "~3.0",
+        "symfony/css-selector": "~3.0"
     },
     "autoload": {
         "classmap": [
