'简化前端处理操作'

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,22 @@
 /vendor
 /node_modules
+
 Homestead.yaml
 Homestead.json
 .env
 .idea/
 _ide_helper.php
 composer.lock
-/public/build
+npm-debug.log
+.DS_Store
+
 /public/css
 /public/fonts
+/public/img
 /public/js
+/public/vendor
+
 /storage/framework/*
 /storage/app/*
-/public/vendor
 /storage/logs/*
 /storage/cache/*
-/npm-debug.log
-.DS_Store
