--- a/composer.json
+++ b/composer.json
@@ -7,19 +7,22 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "laravelcollective/html": "^5.2",
         "barryvdh/laravel-ide-helper": "2.*",
-        "qiniu/php-sdk": "^7.0",
-        "league/flysystem-aws-s3-v3": "^1.0",
-        "zgldh/qiniu-laravel-storage": "^0.3.0"
+	"qiniu/php-sdk": "^7.0",
+	"league/flysystem-aws-s3-v3": "^1.0",
+        "laravelcollective/html": "^5.2",
+        "doctrine/cache": "^1.6",
+        "aws/aws-php-sns-message-validator": "^1.1",
+        "symfony/psr-http-message-bridge": "^0.2.0",
+        "league/flysystem-rackspace": "^1.0",
+	"zgldh/qiniu-laravel-storage": "^0.3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
-        "phpspec/phpspec": "~2.1",
-        "symfony/dom-crawler": "~3.0",
-        "symfony/css-selector": "~3.0"
+        "symfony/css-selector": "2.8.*|3.0.*",
+        "symfony/dom-crawler": "2.8.*|3.0.*"
     },
     "autoload": {
         "classmap": [
@@ -35,23 +38,19 @@
         ]
     },
     "scripts": {
-        "post-install-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize"
-        ],
-        "pre-update-cmd": [
-            "php artisan clear-compiled"
-        ],
-        "post-update-cmd": [
-            "php artisan clear-compiled",
-            "php artisan optimize",
-            "php artisan ide-helper:generate"
-        ],
         "post-root-package-install": [
             "php -r \"copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
             "php artisan key:generate"
+        ],
+        "post-install-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postInstall",
+            "php artisan optimize"
+        ],
+        "post-update-cmd": [
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan optimize"
         ]
     },
     "config": {
