--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "private": true,
+  "scripts": {
+    "prod": "gulp --production",
+    "dev": "gulp watch"
+  },
   "devDependencies": {
     "bootstrap": "^3.3.6",
-    "gulp": "^3.8.8",
-    "jquery": "^2.2.0",
+    "bootstrap-sass": "^3.0.0",
+    "gulp": "^3.9.1",
+    "jquery": "^2.2.4",
+    "laravel-elixir": "^5.0.0",
     "marked": "^0.3.5",
     "simditor": "^2.3.6",
     "simditor-markdown": "^1.1.2",
     "to-markdown": "^3.0.0"
-  },
-  "dependencies": {
-    "laravel-elixir": "^3.0.0",
-    "bootstrap-sass": "^3.0.0"
   }
 }
