--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "gulp watch"
   },
   "dependencies": {
+    "bootstrap-datetime-picker": "github:smalot/bootstrap-datetimepicker",
     "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
     "jquery": "^2.2.4",
@@ -14,7 +15,5 @@
     "simditor-markdown": "^1.1.2",
     "to-markdown": "^3.0.0"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
