--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dev": "gulp watch"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "bootstrap-datetime-picker": "github:smalot/bootstrap-datetimepicker",
     "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
@@ -13,6 +15,9 @@
     "marked": "^0.3.5",
     "simditor": "^2.3.6",
     "simditor-markdown": "^1.1.2",
+    "simple-hotkeys": "^1.0.3",
+    "simple-module": "^3.0.3",
+    "simple-uploader": "^3.0.0",
     "to-markdown": "^3.0.0"
   },
   "devDependencies": {}
