add-qiniu-config

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,11 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
+
+QINIU_DOMAINS_DEFAULT=
+QINIU_DOMAINS_HTTPS=
+QINIU_DOMAINS_CUSTOM=
+QINIU_ACCESS_KEY=
+QINIU_SECRET_KEY=
+QINIU_BUCKET=
+QINIU_NOTIFY_URL=
