--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ DB_DATABASE=laravelblog
 DB_USERNAME=root
 DB_PASSWORD=123456
 
+DISK=qiniu
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
