--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
     "prod": "gulp --production",
     "dev": "gulp watch"
   },
-  "dependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+  "devDependencies": {
     "bootstrap-datetime-picker": "github:smalot/bootstrap-datetimepicker",
-    "bootstrap-sass": "^3.0.0",
+    "bootstrap-sass": "^3.3.7",
+    "css-loader": "^0.26.0",
     "gulp": "^3.9.1",
-    "jquery": "^2.2.4",
+    "jquery": "^3.1.0",
     "jquery-unslider": "^1.2.0",
-    "laravel-elixir": "^5.0.0",
+    "laravel-elixir": "^6.0.0-11",
+    "laravel-elixir-vue-2": "^0.2.0",
+    "laravel-elixir-webpack-official": "^1.0.2",
+    "lodash": "^4.16.2",
     "marked": "^0.3.5",
     "simditor": "^2.3.6",
     "simditor-markdown": "^1.1.2",
     "simple-hotkeys": "^1.0.3",
     "simple-module": "^3.0.3",
     "simple-uploader": "^3.0.0",
-    "to-markdown": "^3.0.0"
-  },
-  "devDependencies": {}
+    "to-markdown": "^3.0.0",
+    "vue": "^2.0.1",
+    "vue-resource": "^1.0.3"
+  }
 }
