--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
+    "bootstrap": "^3.3.7",
     "bootstrap-datetime-picker": "github:smalot/bootstrap-datetimepicker",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.26.0",
