--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.1.0",
     "jquery-unslider": "^1.2.0",
     "laravel-elixir": "^6.0.0-11",
+    "laravel-elixir-browsersync-official": "^1.0.0",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
