--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-datetime-picker": "github:smalot/bootstrap-datetimepicker",
     "bootstrap-sass": "^3.3.7",
+    "bootstrap-select": "^1.12.1",
     "css-loader": "^0.26.0",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
