--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "css-loader": "^0.26.0",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
-    "jquery-unslider": "^1.2.0",
     "laravel-elixir": "^6.0.0-11",
     "laravel-elixir-browsersync-official": "^1.0.0",
     "laravel-elixir-vue-2": "^0.2.0",
@@ -23,6 +22,7 @@
     "simple-hotkeys": "^1.0.3",
     "simple-module": "^3.0.3",
     "simple-uploader": "^3.0.0",
+    "swiper": "^3.4.0",
     "to-markdown": "^3.0.0",
     "vue": "^2.0.1",
     "vue-resource": "^1.0.3"
