--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ php:
   - 7.0
   - 7.1
 before_script:
-  - composer install
+  - composer install --no-dev --no-scripts
   - cd tests
 script: phpunit -v
