--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ php:
   - 5.6
   - 7.0
   - 7.1
+services:
+  - redis-server
 before_script:
-  - composer install --no-dev --no-scripts
+  - composer install
 script: phpunit
