--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ php:
   - 7.0
   - 7.1
 services:
+  - mysql
   - redis-server
 before_script:
+  - cp .env.example .env
   - composer install
+  - php artisan migrate
 script: phpunit
