--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
   - mysql
   - redis-server
 before_script:
+  - mysql -e 'CREATE DATABASE laravelblog;'
   - cp .env.example .env
   - composer install
   - php artisan migrate
