--- a/package.json
+++ b/package.json
@@ -5,32 +5,28 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
-    "bootstrap": "^3.3.7",
     "bootstrap-datetime-picker": "github:smalot/bootstrap-datetimepicker",
     "bootstrap-sass": "^3.3.7",
-    "css-loader": "^0.26.1",
+    "css-loader": "^0.26.4",
     "gulp": "^3.9.1",
-    "jquery": "^3.1.0",
+    "jquery": "^3.2.0",
+    "jquery-lazyload": "^1.9.7",
     "laravel-elixir": "^6.0.0-15",
+    "laravel-elixir-env": "^1.0.0",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.10",
     "lodash": "^4.17.4",
     "marked": "^0.3.5",
     "path": "^0.12.7",
-    "phplint": "^1.7.1",
     "simditor": "^2.3.6",
     "simditor-markdown": "^1.1.2",
     "simple-hotkeys": "^1.0.3",
     "simple-module": "^3.0.3",
     "simple-uploader": "^3.0.0",
-    "swiper": "^3.4.1",
-    "to-markdown": "^3.0.0",
-    "vue": "^2.1.8",
-    "vue-resource": "^1.0.3",
+    "swiper": "^3.4.2",
+    "to-markdown": "^3.0.4",
+    "vue": "^2.2.4",
+    "vue-resource": "^1.2.1",
     "webpack": "^2.2.0"
-  },
-  "dependencies": {
-    "jquery-lazyload": "^1.9.7",
-    "laravel-elixir-env": "^1.0.0"
   }
 }
