--- a/composer.json
+++ b/composer.json
@@ -6,18 +6,19 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
-        "barryvdh/laravel-ide-helper": "2.*",
-        "qiniu/php-sdk": "^7.0",
-        "league/flysystem-aws-s3-v3": "^1.0",
-        "laravelcollective/html": "^5.2",
-        "doctrine/cache": "^1.6",
         "aws/aws-php-sns-message-validator": "^1.1",
-        "symfony/psr-http-message-bridge": "^0.2.0",
+        "barryvdh/laravel-ide-helper": "2.*",
+        "doctrine/cache": "^1.6",
+        "guzzlehttp/guzzle": "^6.2",
+        "laravel/framework": "5.4.*",
+        "laravelcollective/html": "^5.2",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "league/flysystem-rackspace": "^1.0",
-	    "zgldh/qiniu-laravel-storage": "^0.3.0",
+        "predis/predis": "^1.1",
+        "qiniu/php-sdk": "^7.0",
+        "symfony/psr-http-message-bridge": "^0.2.0",
         "vinkla/pusher": "^2.4",
-        "predis/predis": "^1.1"
+        "zgldh/qiniu-laravel-storage": "^0.3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
