simditor-to-tar-simditor

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lodash": "^4.17.4",
     "marked": "^0.3.5",
     "path": "^0.12.7",
-    "simditor": "^2.3.6",
+    "tar-simditor": "^2.3.7",
     "simditor-markdown": "^1.1.2",
     "simple-hotkeys": "^1.0.3",
     "simple-module": "^3.0.3",
