--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap-datetime-picker": "github:smalot/bootstrap-datetimepicker",
     "bootstrap-sass": "^3.3.7",
     "css-loader": "^0.26.4",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "jquery": "^3.2.0",
     "jquery-lazyload": "^1.9.7",
