--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp": "^3.9.1",
     "jquery": "^3.2.0",
     "jquery-lazyload": "^1.9.7",
+    "jquery-serializejson": "^2.8.1",
     "laravel-elixir": "^6.0.0-15",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.10",
