--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
     "require": {
         "php": ">=5.6.4",
         "aws/aws-php-sns-message-validator": "^1.1",
-        "barryvdh/laravel-ide-helper": "2.*",
         "doctrine/cache": "^1.6",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
@@ -21,6 +20,8 @@
         "zgldh/qiniu-laravel-storage": "^0.3.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "2.*",
+        "doctrine/dbal": "^2.5",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7",
