--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "laravelblog",
-  "version": "v0.3.3",
+  "version": "v0.4.0",
   "private": true,
-  "description": "laravelblog frontend",
-  "license": "MIT",
-  "repository": "https://github.com/itargaryen/laravelblog",
   "scripts": {
-    "prod": "gulp --production",
-    "dev": "gulp watch"
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "axios": "^0.16.1",
     "bootstrap-datetime-picker": "github:smalot/bootstrap-datetimepicker",
     "bootstrap-sass": "^3.3.7",
+    "cross-env": "^5.0.0",
     "css-loader": "^0.26.4",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "jquery": "^3.2.0",
     "jquery-lazyload": "^1.9.7",
     "jquery-serializejson": "^2.8.1",
-    "laravel-elixir": "^6.0.0-15",
-    "laravel-elixir-vue-2": "^0.2.0",
-    "laravel-elixir-webpack-official": "^1.0.10",
+    "laravel-mix": "^0.12.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.5",
+    "path": "^0.12.7",
     "simple-hotkeys": "^1.0.3",
     "simple-module": "^3.0.3",
     "simple-uploader": "^3.0.0",
@@ -30,9 +32,6 @@
     "tar-simditor": "^2.3.11",
     "tar-simditor-markdown": "^1.1.2",
     "to-markdown": "^3.0.4",
-    "vue": "^2.2.4",
-    "vue-resource": "^1.2.1",
-    "webpack": "^2.2.0",
-    "path": "^0.12.7"
+    "vue": "^2.2.4"
   }
 }
