--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "devDependencies": {
     "axios": "^0.16.1",
-    "bootstrap-datetime-picker": "github:smalot/bootstrap-datetimepicker",
+    "bootstrap-datetime-picker": "^2.4.4",
     "bootstrap-sass": "^3.3.7",
     "cross-env": "^5.0.0",
     "css-loader": "^0.26.4",
