--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-APP_ENV=local
+APP_ENV=production
+APP_DEBUG=false
+APP_LOG_LEVEL=error
+APP_TIMEZONE=Asia/Shanghai
 APP_KEY=
-APP_DEBUG=true
-APP_LOG_LEVEL=debug
-APP_URL=http://laravelblog.app
+APP_URL=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -10,8 +11,6 @@ DB_PORT=3306
 DB_DATABASE=laravelblog
 DB_USERNAME=root
 DB_PASSWORD=
-
-DISK=qiniu
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -32,6 +31,10 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
+
+STATIC_URL=http://laravelblog.app
+
+DISK=
 
 QINIU_DOMAINS_DEFAULT=
 QINIU_DOMAINS_HTTPS=
