--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
-APP_ENV=production
-APP_DEBUG=false
-APP_LOG_LEVEL=error
+APP_NAME=Gryen-GTD
+APP_ENV=local
+APP_DEBUG=true
+APP_LOG_LEVEL=debug
 APP_TIMEZONE=Asia/Shanghai
 APP_KEY=
-APP_URL=
+APP_URL=http://www.gryen.local
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravelblog
+DB_DATABASE=gryengtd
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -16,6 +17,8 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
+
+CACHE_DURATION=60
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -32,7 +35,8 @@ PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
 
-STATIC_URL=http://laravelblog.app
+STATIC_URL=http://www.gryen.local
+SITE_DEFAULT_IMAGE=http://7xnswo.com1.z0.glb.clouddn.com/default-image.jpg
 
 DISK=
 
