--- a/composer.json
+++ b/composer.json
@@ -6,21 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "doctrine/cache": "^1.6",
-        "guzzlehttp/guzzle": "^6.2",
-        "laravel/framework": "5.4.*",
-        "laravelcollective/html": "^5.2",
-        "predis/predis": "^1.1",
-        "qiniu/php-sdk": "^7.0",
+        "laravel/framework": "5.4.36",
+        "laravelcollective/html": "5.4.9",
         "spatie/laravel-sitemap": "v2.4.*",
-        "symfony/psr-http-message-bridge": "^0.2.0",
-        "vinkla/pusher": "^2.4",
-        "zgldh/qiniu-laravel-storage": "^0.3.0"
+        "zgldh/qiniu-laravel-storage": "^0.9.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "2.*",
-        "doctrine/dbal": "^2.5",
-        "fzaninotto/faker": "~1.4",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "doctrine/dbal": "^2.6",
+        "fzaninotto/faker": "^1.7",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.7",
         "symfony/css-selector": "3.1.*",
