--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.36",
         "laravelcollective/html": "5.4.9",
+        "predis/predis": "^1.1",
         "spatie/laravel-sitemap": "v2.4.*",
         "zgldh/qiniu-laravel-storage": "^0.9.0"
     },
