up-to-laravel-5.6

--- a/package.json
+++ b/package.json
@@ -3,29 +3,30 @@
   "private": true,
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
     "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
     "axios": "^0.18.0",
+    "bootstrap": "^4.0.0",
     "bootstrap-datetime-picker": "^2.4.4",
     "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.0",
+    "cross-env": "^5.1",
     "dotenv": "^5.0.1",
     "fs": "0.0.1-security",
-    "jquery": "^3.2.0",
+    "jquery": "^3.2",
     "jquery-lazyload": "^1.9.7",
     "jquery-serializejson": "^2.8.1",
-    "laravel-mix": "^0.12.1",
+    "laravel-mix": "^2.0",
     "lodash": "^4.17.4",
+    "popper.js": "^1.12",
     "purifycss-webpack": "^0.7.0",
     "tar-simditor": "^2.4.3",
-    "vue": "^2.2.4",
-    "webpack-merge": "^4.1.0"
+    "vue": "^2.5.7"
   }
 }
