--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,11 @@
 APP_NAME=Gryen-GTD
 APP_ENV=local
-APP_DEBUG=true
-APP_LOG_LEVEL=debug
-APP_TIMEZONE=Asia/Shanghai
 APP_KEY=
+APP_DEBUG=true
+APP_TIMEZONE=Asia/Shanghai
 APP_URL=http://www.gryen.local
+
+LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -16,6 +17,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
+SESSION_LIFETIME=120
 QUEUE_DRIVER=sync
 
 CACHE_DURATION=60
@@ -25,15 +27,19 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
-PUSHER_KEY=
-PUSHER_SECRET=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=mt1
+
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 STATIC_URL=http://www.gryen.local
 SITE_DEFAULT_IMAGE=http://7xnswo.com1.z0.glb.clouddn.com/default-image.jpg
