--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,31 @@
 {
-    "name": "itargaryen/laravelblog",
-    "keywords": ["laravelblog", "laravel"],
-    "description": "A Laravelblog App Based on Laravel Framework.",
+    "name": "itargaryen/gryen-gtd",
+    "keywords": ["gtd", "blog", "laravel"],
+    "description": "A GTD App Based on Laravel v5.6.",
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
-        "laravel/framework": "5.4.36",
-        "laravelcollective/html": "5.4.9",
-        "spatie/laravel-sitemap": "v2.4.*",
+        "php": ">=7.1.3",
+        "fideloper/proxy": "^4.0",
+        "laravel/framework": "5.6.*",
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "5.6.6",
+        "spatie/laravel-sitemap": "4.0",
         "zgldh/qiniu-laravel-storage": "^0.9.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.4",
+        "barryvdh/laravel-ide-helper": "2.4.3",
         "doctrine/dbal": "^2.6",
+        "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.7",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
-        "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "nunomaduro/collision": "^2.0",
+        "phpunit/phpunit": "~7.1.0"
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database/seeds",
+            "database/factories"
         ],
         "psr-4": {
             "App\\": "app/"
@@ -37,27 +40,30 @@
         }
 
     },
+    "extra": {
+        "laravel": {
+            "dont-discover": [
+            ]
+        }
+    },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "@php artisan key:generate"
         ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan clear-compiled",
-            "php artisan ide-helper:generate",
-            "php artisan optimize"
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover",
+            "@php artisan ide-helper:generate"
         ]
     },
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
         "optimize-autoloader": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
