--- a/package.json
+++ b/package.json
@@ -11,22 +11,17 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "autoprefixer": "^8.0.0",
     "axios": "^0.18.0",
-    "bootstrap": "^4.0.0",
     "bootstrap-datetime-picker": "^2.4.4",
     "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.1",
-    "dotenv": "^5.0.1",
     "fs": "0.0.1-security",
-    "jquery": "^3.2",
+    "jquery": "=3.1.1",
     "jquery-lazyload": "^1.9.7",
     "jquery-serializejson": "^2.8.1",
     "laravel-mix": "^2.0",
     "lodash": "^4.17.4",
     "popper.js": "^1.12",
-    "purifycss-webpack": "^0.7.0",
-    "tar-simditor": "^2.4.3",
+    "tar-simditor": "=3.0.5",
     "vue": "^2.5.7"
   }
 }
