--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.6.6",
+        "predis/predis": "^1.1",
         "spatie/laravel-sitemap": "4.0",
         "zgldh/qiniu-laravel-storage": "^0.9.0"
     },
