--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jquery": "=3.1.1",
     "jquery-lazyload": "^1.9.7",
     "jquery-serializejson": "^2.8.1",
+    "laravel-echo": "^1.4.0",
     "laravel-mix": "^2.0",
     "lodash": "^4.17.4",
     "popper.js": "^1.12",
