--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "jquery-lazyload": "^1.9.7",
     "jquery-serializejson": "^2.8.1",
     "laravel-echo": "^1.4.0",
-    "laravel-mix": "^2.0",
+    "laravel-mix": "^2.1.14",
     "lodash": "^4.17.4",
     "popper.js": "^1.12",
+    "socket.io-client": "^2.1.1",
     "tar-simditor": "=3.0.5",
-    "vue": "^2.5.7",
+    "vue": "=2.5.17",
+    "vue-template-compiler": "=2.5.17",
     "vue-lazyload": "^1.2.6"
   },
   "config": {
