--- a/.env.example
+++ b/.env.example
@@ -14,13 +14,15 @@ DB_DATABASE=gryengtd
 DB_USERNAME=root
 DB_PASSWORD=
 
-BROADCAST_DRIVER=log
 CACHE_DRIVER=file
+CACHE_DURATION=60
+
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
 
-CACHE_DURATION=60
+BROADCAST_DRIVER=log
+
+QUEUE_DRIVER=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -53,3 +55,8 @@ QINIU_ACCESS_KEY=
 QINIU_SECRET_KEY=
 QINIU_BUCKET=
 QINIU_NOTIFY_URL=
+
+OAUTH_GRANT_TYPE=password
+OAUTH_CLIENT_ID=2
+OAUTH_CLIENT_SECRET=DfyLwjcATyRt8fD41rVXlYWEMEAog1xwZsgKo9Yi
+OAUTH_SCOPE=*
