--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-cors": "^0.11.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
+        "laravel/passport": "^7.0",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.6.6",
         "predis/predis": "^1.1",
