--- a/.env.example
+++ b/.env.example
@@ -44,7 +44,7 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 STATIC_URL=http://www.gryen.local
-SITE_DEFAULT_IMAGE=http://7xnswo.com1.z0.glb.clouddn.com/default-image.jpg
+SITE_DEFAULT_IMAGE=http://static-dev.gryen.com/default-image.jpg
 
 DISK=
 
