--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,17 @@
         "php": ">=7.1.3",
         "barryvdh/laravel-cors": "^0.11.0",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.6.*",
-        "laravel/passport": "^7.0",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "5.6.6",
         "predis/predis": "^1.1",
         "spatie/laravel-sitemap": "4.0",
+        "tymon/jwt-auth": "1.0.0-rc.3",
         "zgldh/qiniu-laravel-storage": "^0.9.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "2.4.3",
+        "barryvdh/laravel-ide-helper": "2.5.1",
         "doctrine/dbal": "^2.6",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.7",
