--- a/package.json
+++ b/package.json
@@ -13,20 +13,19 @@
   "devDependencies": {
     "axios": "^0.18.0",
     "bootstrap-datetime-picker": "^2.4.4",
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap-sass": "^3.4.0",
     "cz-conventional-changelog": "^2.1.0",
     "fs": "0.0.1-security",
     "jquery": "=3.1.1",
     "jquery-lazyload": "^1.9.7",
-    "jquery-serializejson": "^2.8.1",
+    "jquery-serializejson": "^2.9.0",
     "laravel-echo": "^1.4.0",
     "laravel-mix": "^2.1.14",
-    "lodash": "^4.17.4",
-    "popper.js": "^1.12",
+    "lodash": "^4.17.11",
+    "popper.js": "^1.14.6",
     "socket.io-client": "^2.1.1",
     "tar-simditor": "=3.0.5",
-    "vue": "=2.5.17",
-    "vue-template-compiler": "=2.5.17",
+    "vue": "^2.5.17",
     "vue-lazyload": "^1.2.6"
   },
   "config": {
