up laravel version

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Shanghai
-APP_URL=http://www.gryen.local
+APP_URL=http://www.gryen.localdev
 
 LOG_CHANNEL=stack
 
@@ -22,7 +22,7 @@ SESSION_LIFETIME=120
 
 BROADCAST_DRIVER=log
 
-QUEUE_DRIVER=sync
+QUEUE_CONNECTION=sync
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -57,6 +57,6 @@ QINIU_BUCKET=
 QINIU_NOTIFY_URL=
 
 OAUTH_GRANT_TYPE=password
-OAUTH_CLIENT_ID=2
-OAUTH_CLIENT_SECRET=DfyLwjcATyRt8fD41rVXlYWEMEAog1xwZsgKo9Yi
+OAUTH_CLIENT_ID=
+OAUTH_CLIENT_SECRET=
 OAUTH_SCOPE=*
