--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "devDependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.0.0",
     "bootstrap-datetime-picker": "^2.4.4",
-    "bootstrap-sass": "^3.4.0",
     "cz-conventional-changelog": "^2.1.0",
     "fs": "0.0.1-security",
     "jquery": "=3.1.1",
