--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,12 @@
         "zgldh/qiniu-laravel-storage": "^0.9.0"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
         "barryvdh/laravel-ide-helper": "2.5.1",
+        "beyondcode/laravel-dump-server": "^1.0",
         "doctrine/dbal": "^2.6",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.7",
+        "laravel/dusk": "^4.0",
         "mockery/mockery": "0.9.*",
         "nunomaduro/collision": "^2.0",
         "phpunit/phpunit": "~7.1.0"
