modified travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,33 +9,30 @@ matrix:
   fast_finish: true
   include:
     - php: 7.1
-    - php: 7.1
-      env: setup=lowest
-    - php: 7.2
-    - php: 7.2
-      env: setup=lowest
-    - php: 7.3
-    - php: 7.3
-      env: setup=lowest
 
 cache:
   directories:
     - $HOME/.composer/cache
 
 services:
-  - memcached
   - redis-server
   - mysql
 
 before_install:
   - phpenv config-rm xdebug.ini || true
-  - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - printf "\n" | pecl install -f redis
   - travis_retry composer self-update
-  - mysql -e 'CREATE DATABASE forge;'
+  - mysql -e 'CREATE DATABASE gryengtd;'
 
 install:
-  - if [[ $setup = 'stable' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest; fi
-  - if [[ $setup = 'lowest' ]]; then travis_retry composer update --prefer-dist --no-interaction --prefer-lowest --prefer-stable --no-suggest; fi
+  - travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest;
+  - travis_retry npm install;
+  - travis_retry npm run build;
+
+before_script:
+  - composer self-update
+  - composer install --prefer-source --no-interaction
+  - php artisan key:generate
+  - php artisan migrate
 
 script: vendor/bin/phpunit
