--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ install:
 before_script:
   - composer self-update
   - composer install --prefer-source --no-interaction
+  - cp .env.example .env
   - php artisan key:generate
   - php artisan migrate
 
