--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
 install:
   - travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest;
   - travis_retry npm install;
-  - travis_retry npm run build;
+  - travis_retry npm run prod;
 
 before_script:
   - composer self-update
