--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
     "bootstrap-datetime-picker": "^2.4.4",
+    "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "fs": "0.0.1-security",
     "jquery": "=3.1.1",
