--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,6 @@ before_script:
   - cp .env.example .env
   - php artisan key:generate
   - php artisan migrate
+  - php artisan jwt:secret
 
 script: vendor/bin/phpunit
