--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate"
+        ],
+        "post-update-cmd": [
+            "php artisan clear-compiled",
+            "php artisan ide-helper:generate"
         ]
     }
 }
