replace lazyload lib

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "fs": "0.0.1-security",
     "highlight.js": "^9.14.2",
     "jquery": "=3.1.1",
-    "jquery-lazyload": "^1.9.7",
     "jquery-serializejson": "^2.9.0",
     "laravel-echo": "^1.4.0",
     "laravel-mix": "^4.0.13",
+    "lazysizes": "^4.1.7",
     "lodash": "^4.17.11",
     "popper.js": "^1.14.6",
     "resolve-url-loader": "2.3.1",
