--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery-serializejson": "^2.9.0",
     "laravel-echo": "^1.4.0",
     "laravel-mix": "^4.0.13",
+    "lazysizes": "^5.1.1",
     "lodash": "^4.17.13",
     "popper.js": "^1.14.6",
     "resolve-url-loader": "2.3.1",
