--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jquery-serializejson": "^2.9.0",
     "laravel-echo": "^1.5.4",
     "laravel-mix": "^4.1.2",
+    "lazysizes": "^5.2.0",
     "lodash": "^4.17.15",
     "popper.js": "^1.15.0",
     "resolve-url-loader": "2.3.1",
