--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "1.0.*",
         "fideloper/proxy": "^4.0",
+        "google/apiclient": "^2.4",
         "guzzlehttp/guzzle": "6.5.*",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
