--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Shanghai
-APP_URL=http://www.gryen.localdev
+APP_URL=http://gryen-gtd.myapp
 
 LOG_CHANNEL=stack
 
@@ -43,7 +43,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-STATIC_URL=http://www.gryen.local
+STATIC_URL=http://gryen-gtd.myapp
 SITE_DEFAULT_IMAGE=http://static-dev.gryen.com/default-image.jpg
 
 DISK=
