up to laravel 7

--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,7 @@ bootstrap/cache/
 .env.*.php
 .env.php
 .env
+.env.backup
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
