set node version

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,11 @@ dist: xenial
 language: php
 php:
   - '7.2.5'
-node_js:
-  - '12.14.1'
 
 env:
   global:
     - setup=stable
+  - TRAVIS_NODE_VERSION="12.16.1"
 
 matrix:
   fast_finish: true
@@ -23,6 +22,7 @@ before_install:
 
 install:
   - travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest;
+  - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install $TRAVIS_NODE_VERSION
   - travis_retry npm install -g yarn;
   - travis_retry yarn;
   - travis_retry yarn run prod;
