php artisan jwt:secret -f

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ before_script:
   - composer install --prefer-source --no-interaction
   - php artisan key:generate --env testing
   - php artisan migrate --env testing
-  - php artisan jwt:secret --env testing
+  - php artisan jwt:secret -f --env testing
 
 script: php artisan test
