--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cz-conventional-changelog": "^2.1.0",
     "fs": "0.0.1-security",
     "highlight.js": "^9.14.2",
-    "jquery": ">=3.4.0",
+    "jquery": "^3.4",
     "jquery-serializejson": "^2.9.0",
     "laravel-echo": "^1.4.0",
     "laravel-mix": "^5.0.1",
@@ -29,7 +29,7 @@
     "sass": "^1.22.7",
     "sass-loader": "^8.0.0",
     "socket.io-client": "^2.2.0",
-    "tar-simditor": "3.0.5",
+    "tui-editor": "1.4.9",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.1",
     "vue-template-compiler": "^2.6.10"
