--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "v1.7.0",
+  "version": "v1.7.1",
   "private": true,
   "scripts": {
     "dev": "yarn run development",
@@ -29,7 +29,7 @@
     "sass": "^1.22.7",
     "sass-loader": "^8.0.0",
     "socket.io-client": "^2.2.0",
-    "tui-editor": "1.4.9",
+    "tui-editor": "^1.4.10",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.1",
     "vue-template-compiler": "^2.6.10"
