--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Gryen-GTD
 APP_ENV=testing
-APP_KEY=
+APP_KEY=base64:ZD8HgDi+rBcUodAoJKIFD9iGZTEnbP4k6vTLzmxY0jo=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Shanghai
 APP_URL=http://gryen-gtd.myapp
