--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "v1.9.2",
+  "version": "v1.9.3",
   "private": true,
   "scripts": {
     "dev": "npm run development",
@@ -32,6 +32,7 @@
     "tui-editor": "^1.4.10",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.1",
+    "vue-router": "^3.1.6",
     "vue-template-compiler": "^2.6.10"
   },
   "config": {
