--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,8 @@ before_install:
 install:
   - travis_retry composer update --prefer-dist --no-interaction --prefer-stable --no-suggest;
   - rm -rf ~/.nvm && git clone https://github.com/creationix/nvm.git ~/.nvm && (cd ~/.nvm && git checkout `git describe --abbrev=0 --tags`) && source ~/.nvm/nvm.sh && nvm install 12.16.1
-  - travis_retry npm install -g yarn;
-  - travis_retry yarn;
-  - travis_retry yarn run prod;
+  - travis_retry npm install;
+  - travis_retry npm run prod;
 
 before_script:
   - composer self-update
