--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "cz-conventional-changelog": "^2.1.0",
     "fs": "0.0.1-security",
     "highlight.js": "^10.0.2",
-    "jquery": "3.4.1",
+    "jquery": "^3.5.1",
     "jquery-serializejson": "^2.9.0",
     "laravel-echo": "^1.4.0",
-    "laravel-mix": "^5.0.1",
-    "lazysizes": "^5.1.1",
-    "lodash": "^4.17.13",
+    "laravel-mix": "^5.0.5",
+    "lazysizes": "^5.2.2",
+    "lodash": "^4.17.20",
     "popper.js": "^1.14.6",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.22.7",
