--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "v1.10.2",
+  "version": "v1.10.3",
   "private": true,
   "scripts": {
     "dev": "npm run development",
@@ -11,29 +11,29 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "@toast-ui/editor": "^2.4.0",
     "axios": "^0.19",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.2",
     "bootstrap-datetime-picker": "^2.4.4",
     "cross-env": "^7.0",
     "cz-conventional-changelog": "^2.1.0",
     "fs": "0.0.1-security",
-    "highlight.js": "^10.0.2",
+    "highlight.js": "^10.2.1",
     "jquery": "^3.5.1",
-    "jquery-serializejson": "^2.9.0",
-    "laravel-echo": "^1.4.0",
+    "jquery-serializejson": "^3.1.0",
+    "laravel-echo": "^1.8.1",
     "laravel-mix": "^5.0.5",
     "lazysizes": "^5.2.2",
     "lodash": "^4.17.20",
     "popper.js": "^1.14.6",
     "resolve-url-loader": "^3.1.0",
-    "sass": "^1.22.7",
+    "sass": "^1.26.11",
     "sass-loader": "^8.0.0",
-    "socket.io-client": "^2.2.0",
-    "tui-editor": "^1.4.10",
-    "vue": "^2.6.10",
+    "socket.io-client": "^2.3.1",
+    "vue": "^2.6.12",
     "vue-lazyload": "^1.3.1",
-    "vue-router": "^3.1.6",
-    "vue-template-compiler": "^2.6.10"
+    "vue-router": "^3.4.5",
+    "vue-template-compiler": "^2.6.12"
   },
   "config": {
     "commitizen": {
