--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Shanghai
-APP_URL=http://gryen-gtd.myapp
-APP_EMAIL=email@gryen-gtd.myapp
+APP_DOMAIN=gryen-gtd.test
+APP_URL="http://${APP_DOMAIN}"
+APP_EMAIL="email@${APP_DOMAIN}"
 DOMAIN_ICP=
 
 LOG_CHANNEL=stack
@@ -53,7 +54,7 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-STATIC_URL=http://gryen-gtd.myapp
+STATIC_URL="${APP_URL}"
 SITE_DEFAULT_IMAGE=http://static-dev.gryen.com/default-image.jpg
 
 DISK=
@@ -70,4 +71,5 @@ ARTICLE_PAGE_SIZE=15
 
 LAZY_LOAD_CLASS=lazyload
 
-SESSION_DOMAIN=.gryen-gtd.myapp
+SESSION_DOMAIN=".${APP_DOMAIN}"
+SANCTUM_STATEFUL_DOMAINS="localhost,127.0.0.1,${APP_DOMAIN}"
