improvement(performance): improve preformance and fixed some bugs

--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,5 @@ LAZY_LOAD_CLASS=lazyload
 
 SESSION_DOMAIN=".${APP_DOMAIN}"
 SANCTUM_STATEFUL_DOMAINS="localhost,127.0.0.1,${APP_DOMAIN}"
+
+GTM_CODE=
