--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "mix --production"
   },
   "devDependencies": {
     "@toast-ui/editor": "^2.4.0",
@@ -21,16 +21,18 @@
     "jquery": "^3.5.1",
     "jquery-serializejson": "^3.1.0",
     "laravel-echo": "^1.8.1",
-    "laravel-mix": "^5.0.5",
+    "laravel-mix": "^6.0.6",
     "lazysizes": "^5.2.2",
     "lodash": "^4.17.20",
     "popper.js": "^1.14.6",
+    "postcss": "^8.1",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.26.11",
     "sass-loader": "^8.0.0",
     "socket.io-client": "^2.3.1",
     "vue": "^2.6.12",
     "vue-lazyload": "^1.3.1",
+    "vue-loader": "^15.9.5",
     "vue-router": "^3.4.5",
     "vue-template-compiler": "^2.6.12"
   },
