--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Shanghai
-APP_DOMAIN=gryen-gtd.test
+APP_DOMAIN=gryen-gtd.local
 APP_URL="http://${APP_DOMAIN}"
 APP_EMAIL="email@${APP_DOMAIN}"
 DOMAIN_ICP=
