--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
         "zgldh/qiniu-laravel-storage": "^0.10"
     },
     "require-dev": {
-        "facade/ignition": "^2.3.6",
         "barryvdh/laravel-ide-helper": "^2.6",
         "beyondcode/laravel-dump-server": "^1.0",
         "doctrine/dbal": "^2.10",
+        "facade/ignition": "^2.3.6",
+        "fakerphp/faker": "^1.13",
         "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3"
