--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,3 +40,8 @@ jobs:
           wget http://devtools.qiniu.com/qshell-linux-x64-v2.4.2.zip
           unzip qshell-linux-x64-v2.4.2.zip
           chmod +x ./qshell-linux-x64-v2.4.2
+          
+      - name: Account to qiniu and upload
+        run: |
+          ./qshell-linux-x64-v2.4.2 account ${{ secrets.QINIU_AK }} ${{ secrets.QINIU_SK }}
+          ./qshell-linux-x64-v2.4.2 qupload2 --src-dir=/home/runner/work/gryen-gtd/gryen-gtd/public/dist --bucket=targaryen-top --key-prefix=dist/ --rescan-local=true --skip-file-prefixes=test,demo,.qrsignore --skip-path-prefixes=temp/,tmp/ --skip-fixed-strings=.svn,.git --skip-suffixes=.DS_Store,.exe --delete-on-success=true 
