--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@toast-ui/editor": "^2.4.0",
+    "@vue/compiler-sfc": "^3.0.5",
     "axios": "^0.21",
     "bootstrap": "^4.5.2",
     "cross-env": "^7.0",
@@ -30,11 +31,9 @@
     "sass": "^1.26.11",
     "sass-loader": "^8.0.0",
     "socket.io-client": "^2.3.1",
-    "vue": "^2.6.12",
-    "vue-lazyload": "^1.3.1",
-    "vue-loader": "^15.9.5",
-    "vue-router": "^3.4.5",
-    "vue-template-compiler": "^2.6.12"
+    "vue": "^3.0.5",
+    "vue-loader": "^16.1.0",
+    "vue-router": "4"
   },
   "config": {
     "commitizen": {
