--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "popper.js": "^1.14.6",
     "postcss": "^8.2.4",
     "prosemirror-commands": "^1.1.5",
+    "prosemirror-inputrules": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.13.3",
     "prosemirror-schema-basic": "^1.1.2",
